@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/asterisk-sounds
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/ChangeLog,v 1.1 2005/03/10 00:56:22 stkn Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/ChangeLog,v 1.2 2005/03/21 00:52:30 stkn Exp $
+
+*asterisk-sounds-1.0.7 (21 Mar 2005)
+
+  21 Mar 2005; Stefan Knoblich <stkn@gentoo.org>
+  +asterisk-sounds-1.0.7.ebuild:
+  Version bump.
 
 *asterisk-sounds-1.0.6 (10 Mar 2005)
 
